[package]
name = "eXtr8"
version = "0.1.0"
edition = "2021"

[dependencies]
enigo = "0.2.1"
eframe = {features = [
    "default",
    "__screenshot",
] }
num-integer = "0.1.46"
windows-sys = { version = "0.52.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_Diagnostics_Debug", "Win32_UI_WindowsAndMessaging"] }
tts_rust = "0.3.5"
